basic prod ready